...
} from 'react-native/Libraries/NewAppScreen';

const HomePage = () => {
  return (
    <>
      <StatusBar barStyle="dark-content" />
      <SafeAreaView testID="home">
        <ScrollView
          contentInsetAdjustmentBehavior="automatic"
          style={styles.scrollView}>
          <Header />
          {global.HermesInternal == null ? null : (
            <View style={styles.engine}>
...
